added savedBeer using jpa and added integration test for the controller